Add url scheme for up and down

--- a/upndown-ios/Rakefile
+++ b/upndown-ios/Rakefile
@@ -11,4 +11,12 @@ end
 Motion::Project::App.setup do |app|
   # Use `rake config' to see complete project settings.
   app.name = 'upndown-ios'
+  app.identifier = "com.devranuenal.upanddown"
+  
+  app.info_plist['CFBundleURLTypes'] = [
+    {
+      "CFBundleURLName"     => app.identifier,
+      "CFBundleURLSchemes"  => ["upanddown"]
+    }
+  ]
 end
